# harmony-agent

./: .clippy.toml  .gitignore  .rustfmt.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  IMPLEMENTATION.md  README.md  WARP.md
.github/workflows/: ci.yml
benches/: benchmarks.rs
deploy/docker-compose/: docker-compose.yml
deploy/kubernetes/: daemonset.yaml
deploy/launchd/: cloud.runbeam.wg-agent.plist
deploy/systemd/: wg-agent.service
dev/: CONTROL_API_TESTING.md  DEVELOPMENT_PLAN.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  README.md  TESTING_TOOLS.md  plan.md  test-control-server.sh  wg-gotchas.md
dev/linux/: TESTING.md
dev/macos/: INTEGRATION_STEPS.md  TROUBLESHOOTING_SUMMARY.md
dev/testing/: quick-functional-test.sh  test-minimal.toml  test-wireguard-go.sh  test_device.rs  wg-agent.toml
dev/testing/full-setup/: test-with-docker.sh  verify-connection.sh
dev/testing/full-setup/keys/: client_private.key  client_public.key
dev/testing/full-setup/wireguard-server/: docker-compose.yml
dev/testing/full-setup/wireguard-server/config/: .donoteditthisfile
dev/testing/full-setup/wireguard-server/config/peer1/: peer1.conf  presharedkey-peer1  privatekey-peer1  publickey-peer1
dev/testing/full-setup/wireguard-server/config/server/: privatekey-server  publickey-server
dev/testing/full-setup/wireguard-server/config/wg_confs/: wg0.conf
docs/: API.md  DEVELOPMENT_PLAN.md  MACOS.md  TESTING.md  USER_GUIDE.md  architecture.md
examples/: control-messages.json  control_client.rs  quick-functional-test.sh
examples/privilege-test/: config.toml  functional-test.sh  readme.txt  test-private.key
src/: error.rs  lib.rs  main.rs
src/config/: json.rs  mod.rs  toml_parser.rs  validation.rs
src/control/: api.rs  handler.rs  mod.rs  server.rs
src/monitoring/: health.rs  metrics.rs  mod.rs
src/platform/: detection.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/security/: mod.rs  permissions.rs  privileges.rs  validation.rs
src/service/: launchd.rs  mod.rs  systemd.rs  windows_service.rs
src/wireguard/: device.rs  keys.rs  macos_device.rs  mod.rs  peer.rs  tunnel.rs
tests/: control_server_integration.rs  control_server_test.rs  integration_test.rs  tunnel_integration.rs
