[package]
name = "harmony-agent"
version = "0.1.0"
edition = "2021"
authors = ["Aurabox <hello@aurabox.cloud>"]
description = "A cross-platform WireGuard network agent for managing VPN tunnels"
license = "Apache-2.0"
repository = "https://github.com/aurabx/harmony-agent"
homepage = "https://github.com/aurabx/harmony-agent"
#documentation = "https://docs.rs/harmony-agent"
readme = "README.md"
keywords = ["wireguard", "vpn", "networking", "tunnel", "agent"]
categories = ["network-programming", "command-line-utilities"]
exclude = ["dev/", ".github/", "tmp/", "target/", "*.log"]

[dependencies]
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
libc = "0.2"
axum = "0.7"

# WireGuard dependencies
boringtun = "0.6"
base64 = "0.22"
x25519-dalek = "=2.0.0-rc.3"  # Must match boringtun requirement
zeroize = { version = "1.7", features = ["derive"] }
rand = "0.8"
tun = "0.6"  # Cross-platform TUN device support

[dev-dependencies]
tempfile = "3.8"
proptest = "1.4"  # Property-based testing
criterion = "0.5"  # Benchmarking
mockall = "0.12"  # Mocking framework
serial_test = "3.0"  # Serial test execution

[[bench]]
name = "benchmarks"
harness = false
